# bazel-feedstock

./: .drone.yml  .recipe_maintainers.json  .travis.yml  README.md  azure-pipelines.yml  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_abseil_cpp20210324.2.yaml  linux_64_abseil_cpp20210324.2grpc_cpp1.45.yaml  linux_64_abseil_cpp20210324.2grpc_cpp1.47.yaml  linux_64_abseil_cpp20211102.0.yaml  linux_64_abseil_cpp20220623.0.yaml  linux_64_abseil_cpp20220623.0grpc_cpp1.47.yaml  linux_64_abseil_cpp20220623.0grpc_cpp1.48.yaml  linux_64_feature_setjdk.yaml  linux_64_feature_setnojdk.yaml  linux_64_grpc_cpp1.37libprotobuf3.15.yaml  linux_64_grpc_cpp1.39libprotobuf3.16.yaml  linux_64_grpc_cpp1.40libprotobuf3.16.yaml  linux_64_grpc_cpp1.40libprotobuf3.18.yaml  linux_64_grpc_cpp1.46.yaml  linux_64_grpc_cpp1.47.yaml  linux_64_libgrpc1.54libprotobuf3.21.yaml  linux_64_libgrpc1.55libprotobuf4.23.2.yaml  linux_64_libgrpc1.55libprotobuf4.23.yaml  linux_64_libgrpc1.56libprotobuf4.23.3.yaml  linux_64_libprotobuf4.23.2.yaml  linux_64_libprotobuf4.23.3.yaml  linux_64_libprotobuf4.23.yaml  linux_aarch64_.yaml  linux_aarch64_abseil_cpp20210324.2.yaml  linux_aarch64_abseil_cpp20210324.2grpc_cpp1.45.yaml  linux_aarch64_abseil_cpp20210324.2grpc_cpp1.47.yaml  linux_aarch64_abseil_cpp20211102.0.yaml  linux_aarch64_abseil_cpp20211102.0grpc_cpp1.46.yaml  linux_aarch64_abseil_cpp20220623.0.yaml  linux_aarch64_feature_setjdk.yaml  (+96 more)
recipe/systemlibs/grpc/: BUILD  MODULE.bazel
(+109 files in other folders)
