module(
    name = "grpc",
    version = "GRPC_VERSION",
    repo_name = "io_grpc",
)

bazel_dep(name = "rules_cc", version = "0.2.15")
bazel_dep(name = "protobuf", version = "PROTOC_VERSION", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_shell", version = "0.4.0")
